--- a/View/Admin/Index/create.phtml
+++ b/View/Admin/Index/create.phtml
@@ -44,7 +44,7 @@ if (isset($this->result)) {
           
           <div class="col-sm-12 col-md-6">
             <label for="url">Password</label>
-            <input type="text" name="password" id="password" class="form-control">
+            <input type="password" name="password" id="password" class="form-control">
           </div>
         </div>
       </div>
